	that copy when iterating.

	* src/i_callbacks.c: Change the behavior of update component
	a little.  Update component will deselect all non OBJ_COMPLEX
	objects after it has finished running.	This will give you
	an indication as to which components were update or changed.
	The behavior before was completely silent with no feedback that
	anything happened.

2007-02-16  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* po/fr_FR.po: Updated the French translation.

2007-02-15 Carlos Nieves Onega <cnieves@iespana.es>

	* test/ext_chars.sch: Added test for the new small mu greek char.

2007-02-14 Carlos Nieves Onega <cnieves@iespana.es>

	* test/ext_chars.sch: Added test for the new characters of 
	  the hungarian charset.

2007-02-12  Werner Hoch <werner.ho@gmx.de>

	* src/x_autonumber.c: added gettext makro _() for sort options
	 
2007-02-11 Carlos Nieves Onega <cnieves@iespana.es>

	* po/es_ES.po: Updated spanish translation.

	* ChangeLog: added author entry for the commits Ales made yesterday.

2007-02-11  Werner Hoch <werner.ho@gmx.de>

	* po/de_DE.po: updated german translation

	* po/*po: updated files to add the strings for the attribute editor

	* include/prototypes.h: removed unused declarations

	* src/x_attribedit.c: switched the single attribut editor to GtkDialog.
	  removed the delete button.

2007-02-10  Mike Jarabek  <mjarabek@sentex.ca>

	* include/i_vars.h include/prototype.h lib/system-gschemrc.in
	src/g_rc.c src/g_register.c src/i_vars.c: Added code to scale the
	output postscript font under user control.  This is controlled via
	the postscript-font-scale rc keyword.

2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/x_compselect.h, include/x_pagesel.h, src/o_bus.c,
	src/o_grips.c, src/o_net.c, src/x_autonumber.c, src/x_compselect.c,
	src/x_dialog.c, src/x_image.c, src/x_menus.c, src/x_preview.c,
	src/x_print.c: Fixed a whole bunch of compiler warnings and work on
	[ 1620806 ] various probably bugs and comments about them
