@@ -17,6 +17,12 @@
 	The behavior before was completely silent with no feedback that
 	anything happened.
 
+	* lib/system-gschemrc.in: Since gtk+ 2.x is supposedly correctly
+	raising dialog boxes (and most of the dialog boxes within gschem
+	have been converted to GtkDialog), raise-dialog-boxes-on-expose's
+	default is now disabled.  Thanks to Werner for figuring the dialog
+	situation.
+
 2007-02-16  Patrick Bernaud  <b-patrick@wanadoo.fr>
 
 	* po/fr_FR.po: Updated the French translation.
